--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,7 +140,7 @@ extra:
 nav:
   - Home Page: 
     - Welcome Page: index.md
-    # - About me: 
+    - About me: about_me.md
   - Lecture Notes: 
     - notes/index-lecture-notes.md
     - Operating System: 
@@ -166,6 +166,7 @@ nav:
       - NeRF: paper/3dv/paper-reading-nerf.md
     - AI+X: 
       - DE NOVO PROTEIN DESIGN USING GEOMETRIC VECTOR FIELD NETWORKS: paper/ai_for_sci/paper-reading-vfn.md
+      - De novo design of protein structure and function with RFdiffusion: paper/ai_for_sci/paper-reading-rfdiffusion.md
     - Natural Language Processing: 
       # - paper/index-nlp.md
       - BERT: paper/nlp/paper-reading-bert.md
@@ -182,10 +183,13 @@ nav:
       - Stable Diffusion: paper/generative/paper-reading-stable_diffusion.md
   - Tools: 
     - Welcome Page: tools/index.md
-    - conda: tools/cmake/tools-conda.md
+    - conda: tools/conda/tools-conda.md
   - Discussion:
     - Welcome Page: discussion/index-discussion.md
   - Knowledge Base: 
     - Welcome Page: knowledge/index.md
+    - Machine Learning:
+      - ICRL | In-Context Reinforcement Learning: knowledge/in-context-rl.md
+      - Graphomer: knowledge/graphomer.md
     # - Machine Learning | Deep Learning: 
       # - ICRL | In-Context Reinforcement Learning: 
