--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -171,7 +171,12 @@ nav:
       - DE NOVO PROTEIN DESIGN USING GEOMETRIC VECTOR FIELD NETWORKS: paper/ai_for_sci/paper-reading-vfn.md
       - De novo design of protein structure and function with RFdiffusion: paper/ai_for_sci/paper-reading-rfdiffusion.md
       - AlphaFold Latest Report: paper/ai_for_sci/alphafold-report.md
-      - ProGen2: paper/ai_for_sci/progen2.md
+      - BRIDGING SEQUENCE AND STRUCTURE LATENT DIFFUSION FOR CONDITIONAL PROTEIN GENERATION: paper/ai_for_sci/briging-seq-str.md
+      - DIRECTIONAL MESSAGE PASSING FOR MOLECULAR GRAPHS: paper/ai_for_sci/direct_message_passing.md
+      - SE(3) diffusion model with application to protein backbone generation: paper/ai_for_sci/SE3-diffusion.md
+      - Scaling deep learning for materials discovery: paper/ai_for_sci/materials-discovery.md
+      - Illuminating protein space with a programmable generative model: paper/ai_for_sci/Chroma.md
+      - Crystal Structure Prediction by Joint Equivariant Diffusion: paper/ai_for_sci/DiffCSP.md
     - Natural Language Processing: 
       # - paper/index-nlp.md
       - BERT: paper/nlp/paper-reading-bert.md
@@ -202,5 +207,4 @@ nav:
       - KNN: knowledge/knn.md
     - Mathematic Basic:
       - KL divergence: knowledge/KL.md
-    # - Machine Learning | Deep Learning: 
-      # - ICRL | In-Context Reinforcement Learning: 
+      - SE(3) Equivariance: knowledge/se3-equivariant.md
